# smart-esprit

./: Makefile  README.md  Smart Esprit - Academic project.md  config.h  config.status  configure  configure.in  foyer.glade.bak  foyer.gladep
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capteurs.txt  dechet.txt  drec.txt  etudiants.txt  etudiants_recherchee.txt  fonction.c  fonction.h  fonctionc.c  fonctionc.h  foyer  function.c  function.h  interface.c  interface.c.bak  interface.h  mail.txt  main.c  menu.c  menu.h  menu.txt  menurecherche.txt  niveau.txt  reclamation.c  reclamation.h  reclm.txt  stock.txt  user.c  user.h  user.txt  utilisateur.txt
src/.deps/: callbacks.Po  menu.Po  reclamation.Po  user.Po
